2005-04-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* include/cln/string.h: Declare cl_string.

2005-03-17  Richard B. Kreckel  <kreckel@ginac.de>

	* autoconf/ltmain.sh: Upgrade to libtool-1.5.14.
	* m4/libtool.m4: Upgrade to libtool-1.5.14 with Comeau patch.
	* autoconf/aclocal.m4: Regenerate.

2005-03-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* src/Makefile.in: Use $CXX instead of $CC when linking.

2005-02-27  Richard B. Kreckel  <kreckel@ginac.de>
	
	* examples/perfnum.cc: update to presumed 42st Mersenne prime.

2004-11-28  Richard B. Kreckel  <kreckel@ginac.de>

	Disambiguate binary operators of CLN types with float/double
	* include/cln/dfloat.h: Add binary operator overloads for arguments of
	type double.
	* include/cln/ffloat.h: Likewise, for arguments of type float.
	* include/cln/float.h: Likewise, both for arguments of types double and
	float.
	* include/cln/real.h: Likewise.
	Reported by Isidro Cachadiña Gutiérrez <icacha@unex.es>.

2004-11-03  Richard B. Kreckel  <kreckel@ginac.de>

	* Version 1.1.9 released.

2004-10-28  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

	* src/Makefile.in: Let config.status set LDFLAGS.

2004-10-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cln.pc.in: Fix typo.
	* Makefile.in (INSTALL_SCRIPT): Added, to be used for scripts like
	cln-config.  Allows us to do special things to binaries, like
	installing them with install -s.
	* doc/Makefile.in: add/remove the cln.info from the installed
	$(infodir)/dir unless this is debian install-info (code copied from
	what GNU automake would produce).

2004-10-26  Richard B. Kreckel  <kreckel@ginac.de>

	* src/integer/input/cl_I_read_stream.cc (read_integer): Fix a bug
	that caused radix specifiers to not work when reading from a stream.
	* src/rational/input/cl_RA_read_stream.cc (read_rational): Likewise.
	* src/real/input/cl_R_read_stream.cc (read_real): Likewise.
	* src/float/input/cl_F_read_stream.cc (read_float): Likewise.